--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="@dimen/_250sdp">
 
     <ProgressBar
         android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
         android:layout_gravity="bottom|center"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:padding="@dimen/_5sdp"
         android:gravity="center"/>
 </FrameLayout>
